# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
# 
#   http://www.apache.org/licenses/LICENSE-2.0
# 
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.  
#
# Fichier ChangeLog
# 2010-10-01  Nicolas Hernandez  <nicolas.hernandez@gmail.com>

2010-10-07  Nicolas Hernandez  <nicolas.hernandez@gmail.com>
	* modularisation de src/fr/univnantes/lina/util et src/fr/univnantes/lina/uima/util et externalisation dans projet distinct
    * src/fr/univnantes/lina/uima/util/AnalysisEngine.java: classe Abstract permettant la gestion générique des input/output view/annotation/feature
    * ShellAE.java ainsi que ShellAE.xml et UIMAUtilities.java: 
    	* factoriser la gestion de la création des view/annotation pour l'input view et l'input annotation
    	* ajout du paramètre inputFeature pour ne pas restreindre à la feature coveredText des annotations à traiter
    * example-sequence-inputView-outputAnnotation-then-inputAnnotation-outputView_AAE.xml: ajout du descripteur
	* README: mis à jour notamment la description du composant, des parametres, les instructions d'exécution, les exemples


YYYY-MM-DD  John Doe  <johndoe@example.com>

    * myfile.ext (myfunction): my changes made
    additional changes

    * myfile.ext (unrelated_change): my changes made
    to myfile.ext but completely unrelated to the above

    * anotherfile.ext (somefunction): more changes
